syntax = "proto3";
package auth;

//errors response
message ErrorRes {
    int64 code = 1;
    string message = 2;
}

message BaseResponse {
    bool success = 1;
    ErrorRes errors = 2;
}


//Login message struct
message AuthReq {
    string email = 1;
    string password = 2;
    int64 auth_type = 3;
}

message LogoutReq {
    string device_id = 1;
    string refresh_token = 2;
}

// fogot password
message FogotPassWord {
    string email = 1;
}

message AuthRes {
    string access_token = 1;
    int64 expires_in = 2;
    int64 refresh_expires_in = 3;
    string refresh_token = 4;
    string token_type = 5;
    string session_state = 6;
    string scope = 7;
    string hash_key = 8;
    BaseResponse base_response = 9;
}

//Register message struct
message RegisterReq {
    string email = 1;
    string display_name = 2;
    string password = 3;
    int64 auth_type = 4;
    string first_name = 5;
    string last_name = 6;
}

message RegisterRes {
    BaseResponse base_response = 1;
}

service Auth {
    rpc login(AuthReq) returns (AuthRes) {};
    rpc register(RegisterReq) returns (RegisterRes) {};
    rpc fogot_password(FogotPassWord) returns (BaseResponse) {};
    rpc logout(LogoutReq) returns (BaseResponse) {};
}
