syntax = "proto3";
package group;


message MessageObjectResponse {
  string id = 1;
  int64 group_id = 2;
  string group_type = 3;
  string from_client_id = 4;
  string client_id = 5;
  bytes message = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message ClientInGroupResponse {
  string id = 1;
  string username = 2;
}

message GroupObjectResponse {
  int64 group_id = 1;
  string group_name = 2;
  string group_domain = 3;
  string group_avatar = 4;
  string group_type = 5;
  repeated ClientInGroupResponse lst_client = 6;
  int64 last_message_at = 7;
  MessageObjectResponse last_message = 8;
  string created_by_client_id = 9;
  int64 created_at = 10;
  string updated_by_client_id = 11;
  int64 updated_at = 12;
}

message ListGroupObjectResponse {
  repeated GroupObjectResponse lst_group = 1;
}

message BaseResponse {
    bool success = 1;
}

// object client
message base_client {
  string client_domain = 1;
  string client_id = 2;
}

// Request: create group
message CreateGroupRequest {
  string group_name = 1;
  string group_type = 2;
  string group_domain = 3;
  string created_by_client_id = 4;
  repeated base_client lst_client = 5;
  int64 ref_group_id = 6;
  string ref_domain = 7;
}
// Response: groupObjectResponse


// Request: update group
message UpdateGroupRequest {
  int64 group_id = 1;
  string group_name = 2;
  string group_avatar = 3;
  string updated_by_client_id = 4;
}
// Response: groupObjectResponse


// Request: get group
message GetGroupRequest {
  int64 group_id = 1;
  string group_domain = 2;
}
// Response: groupObjectResponse


// Request: get joined groups
message GetJoinedGroupsRequest {
  string client_id = 1;

}
// Response
message GetJoinedGroupsResponse {
  repeated GroupObjectResponse lst_group = 1;
}

// Request: search groups
message SearchGroupsRequest {
  string keyword = 1;
}
// Response
message SearchGroupsResponse {
  repeated GroupObjectResponse lst_group = 1;
}

// Request: invite to group
message InviteToGroupRequest {
  string from_client_id = 1;
  string client_id = 2;
  int64 group_id = 3;
}
// Response BaseResponse


// Request: join group
message JoinGroupRequest {
  string client_id = 1;
  int64 group_id = 2;
}
// Response: BaseResponse


// Method
service Group {
    rpc create_group(CreateGroupRequest) returns (ListGroupObjectResponse) {};
    rpc get_group(GetGroupRequest) returns (GroupObjectResponse) {};
    rpc search_groups(SearchGroupsRequest) returns (SearchGroupsResponse) {};
    rpc get_joined_groups(GetJoinedGroupsRequest) returns (GetJoinedGroupsResponse) {};
    rpc invite_to_group(InviteToGroupRequest) returns (BaseResponse) {};
    rpc join_group(JoinGroupRequest) returns (BaseResponse) {};
}
